# RealSenseID

./: .bdsignore  .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  Readme.md  release_info.json  release_notes.txt
examples/c_example/: CMakeLists.txt  main.c
examples/cpp_example/: CMakeLists.txt  main.cc
examples/csharp_example/: App.config  App.xaml  App.xaml.cs  AuthSettingsInput.xaml  AuthSettingsInput.xaml.cs  CMakeLists.txt  DeleteUserInput.xaml  DeleteUserInput.xaml.cs  Dictionary1.xaml  EnrollInput.xaml  EnrollInput.xaml.cs  ErrorDialog.xaml  MainWindow.xaml  MainWindow.xaml.cs  ProgressBarDialog.xaml  Utilities.cs
examples/csharp_example/Properties/: AssemblyInfo.cs  Settings.Designer.cs  Settings.settings
examples/shared/signature_example/: CMakeLists.txt  rsid_signature_example.cc  rsid_signature_example.h  rsid_signature_example_export.h
samples/c/: CMakeLists.txt  authenticate.c  enroll.c  preview.c
samples/cpp/: CMakeLists.txt  authenticate.cc  enroll.cc  faces.cc  host-mode.cc  multi-faces.cc  pair-device.cc  preview.cc  preview_snapshot.cc  secure_mode_helper.cc  secure_mode_helper.h
samples/csharp/: CMakeLists.txt  Program.cs
samples/csharp/Properties/: AssemblyInfo.cs
src/: AndroidPreview.cc  AndroidPreview.h  CMakeLists.txt  CommonValues.h  DeviceController.cc  DeviceControllerImpl.cc  DeviceControllerImpl.h  DiscoverDevices.cc  ExtendedFaceprints.h  FaceAuthenticator.cc  FaceAuthenticatorImpl.cc  FaceAuthenticatorImpl.h  FwUpdater.cc  Logging.cc  Matcher.cc  Matcher.h  OpencvPreview.cc  OpencvPreview.h  Preview.cc  PreviewImpl.cc  PreviewImpl.h  StatusHelper.cc  StatusHelper.h  UpdateChecker.cc  UpdateCheckerNotImpl.cc  Version.cc
src/Capture/: AndroidCapture.cc  AndroidCapture.h  CMakeLists.txt  JPEGDecoder.h  JPEGTurboDecoder.cc  JPEGTurboDecoder.h  JPEGWICDecoder.cc  JPEGWICDecoder.h  LibUVCCapture.cc  LinuxCapture.cc  LinuxCapture.h  MSMFCapture.cc  MSMFCapture.h  MetadataDefines.h  RawHelper.cc  RawHelper.h  RawToRgb.cc  RawToRgb.h  StreamConverter.cc  StreamConverter.h
src/Common/: CommonDefines.h
src/DeviceController/: CMakeLists.txt  DeviceControllerApi.cc  DeviceControllerImpl.cc  DeviceControllerImpl.h
src/Discover/: CMakeLists.txt  DiscoverDevices_Linux.cc  DiscoverDevices_Win32.cc
src/FaceAuthenticator/: CMakeLists.txt  FaceAuthenticatorApi.cc
src/FaceAuthenticator/Impl/: FaceAuthenticatorCommon.cc  FaceAuthenticatorCommon.h  FaceAuthenticatorF45x.cc  FaceAuthenticatorF45x.h  FaceAuthenticatorF46x.cc  FaceAuthenticatorF46x.h  IFaceAuthenticator.h
src/FwUpdate/: CMakeLists.txt  Cmds.cc  Cmds.h  FwUpdateEngine.cc  FwUpdateEngine.h  FwUpdaterApi.cc  FwUpdaterComm.cc  FwUpdaterComm.h  IFwUpdater.h  ModuleInfo.h  Utilities.cc  Utilities.h
src/FwUpdate/Common/: CMakeLists.txt  Common.cc  Common.h
src/FwUpdate/F45x/: CMakeLists.txt  Cmds.cc  Cmds.h  FwUpdateEngineF45x.cc  FwUpdateEngineF45x.h  FwUpdaterCommF45x.cc  FwUpdaterCommF45x.h  FwUpdaterF45x.cc  FwUpdaterF45x.h  ModuleInfo.h  Utilities.cc  Utilities.h
src/FwUpdate/F46x/: CMakeLists.txt  Cmds.cc  Cmds.h  FwUpdateEngineF46x.cc  FwUpdateEngineF46x.h  FwUpdaterCommF46x.cc  FwUpdaterCommF46x.h  FwUpdaterF46x.cc  FwUpdaterF46x.h  ModuleInfo.h  Utilities.cc  Utilities.h
src/LicenseChecker/: CMakeLists.txt  LicenseChecker.cc  LicenseChecker.h  LicenseData.h  LicenseUtils.cc  LicenseUtils.h
src/LicenseChecker/LicenseCheckerImpl/: ILicenseCheckerImpl.h  LicenseCheckerImpl.cc  LicenseCheckerImpl.h
src/LicenseChecker/LicenseUtilsImpl/: ILicenseUtils.h  LicenseUtils_android.cc  LicenseUtils_android.h  LicenseUtils_nix.cc  LicenseUtils_nix.h  LicenseUtils_win.cc  LicenseUtils_win.h
src/Logger/: CMakeLists.txt  Logger.cc  Logger.h  LoggingApi.cc
src/Matcher/: CMakeLists.txt  ExtendedFaceprints.h  Matcher.cc  Matcher.h  MatcherImplDefines.h  MatcherStatics.cc
src/PacketManager/: AndroidSerial.cc  AndroidSerial.h  CMakeLists.txt  CommonTypes.h  Crc16.cc  Crc16.h  CyclicBuffer.cc  CyclicBuffer.h  LinuxSerial.cc  LinuxSerial.h  MbedtlsWrapper.cc  MbedtlsWrapper.h  NonSecureHostSession.cc  NonSecureHostSession.h  NonSecureSession.cc  NonSecureSession.h  PacketSender.cc  PacketSender.h  Randomizer.cc  Randomizer.h  SecureHostSession.cc  SecureHostSession.h  SecureSession.cc  SecureSession.h  SerialConnection.h  SerialPacket.cc  SerialPacket.h  Timer.cc  Timer.h  UnixSerial.cc  UnixSerial.h  WindowsSerial.cc  WindowsSerial.h
src/Preview/: CMakeLists.txt  PreviewApi.cc  PreviewImpl.cc
src/Preview/Capture/: JPEGTurboDecoder.cc  JPEGTurboDecoder.h  JPEGWICDecoder.h  LibUVCCapture.cc  LibUVCCapture.h  MSMFCapture.cc  MSMFCapture.h  RawHelper.cc  StreamConverter.cc  StreamConverter.h
tools/rsid-cli/: CMakeLists.txt  main.cc
tools/rsid-fw-update/: CMakeLists.txt  main.cc
tools/rsid-viewer/: App.config  AuthSettingsInput.xaml  AuthSettingsInput.xaml.cs  CMakeLists.txt  ConsoleWindow.xaml  ConsoleWindow.xaml.cs  Database.cs  DatabaseSerializer.cs  DeleteUserInput.xaml  Dictionary1.xaml  EnrollInput.xaml  EnrollInput.xaml.cs  EnrollInstructions.xaml  EnrollInstructions.xaml.cs  ErrorDialog.xaml  ErrorDialog.xaml.cs  FrameDumper.cs  FwUpdateInput.xaml  FwUpdateInput.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OKCancelDialog.xaml  OKCancelDialog.xaml.cs  PowerDialog.xaml  PowerDialog.xaml.cs  ProgressBarDialog.xaml  ProgressBarDialog.xaml.cs  UpdateAvailableDialog.xaml  UpdateAvailableDialog.xaml.cs  UserApprovalInput.xaml  UserApprovalInput.xaml.cs  UserCard.xaml  UserCard.xaml.cs  Utilities.cs
tools/rsid-viewer/Properties/: AssemblyInfo.cs.in  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
tools/shared/secure-mode-helper/: CMakeLists.txt  secure_mode_helper.cc  (+2 more)
wrappers/c/: CMakeLists.txt
wrappers/csharp/: Authenticator.cs  CMakeLists.txt  DeviceController.cs  Discover.cs  FwUpdater.cs  Logging.cs  Preview.cs  Shared.cs  UpdateChecker.cs
wrappers/python/: CMakeLists.txt  device_controller_py.cc  discover_devices_py.cc  face_auth_py.cc  fw_updater_py.cc  logging_py.cc  preview_py.cc  rsid_py.cc  rsid_py.h  update_checker_py.cc
(+160 files in other folders)
